--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -2,18 +2,22 @@ version: 2
 updates:
   - package-ecosystem: "terraform"
     directory: "/"
+    reviewers:
+      - jamieastley
+    assignees:
+      - jamieastley
     schedule:
       interval: "daily"
       time: "19:00"
       timezone: "Australia/Sydney"
-    commit-message:
-      prefix: "chore:"
 
   - package-ecosystem: "github-actions"
     directory: "/"
+    reviewers:
+      - jamieastley
+    assignees:
+      - jamieastley
     schedule:
       interval: "daily"
       time: "19:00"
       timezone: "Australia/Sydney"
-    commit-message:
-      prefix: "chore:"
